--- a/job-spec/climateq-ea.toml
+++ b/job-spec/climateq-ea.toml
@@ -1,7 +1,7 @@
 type = "directrequest"
 schemaVersion = 1
-name = "ea_co2"
-contractAddress = "0x5CeD5FE184f6504DFF3Ce899392f8019f4F580f6"
+name = "EA_NAME"
+contractAddress = "ORACLE_CONTRACT_ADDRESS"
 maxTaskDuration = "0s"
 observationSource = """
     decode_log   [type=ethabidecodelog
@@ -10,15 +10,15 @@ observationSource = """
                   topics="$(jobRun.logTopics)"]
 
     decode_cbor  [type=cborparse data="$(decode_log.data)"]
-    fetch        [type=bridge name="api_co2" requestData="{\\"id\\": $(jobSpec.externalJobID), \\"data\\": { \\"from\\": $(decode_cbor.from), \\"to\\": $(decode_cbor.to), \\"passengers\\": $(decode_cbor.passengers), \\"classFlight\\": $(decode_cbor.classFlight) }}"]
+    fetch        [type=bridge name="BRIDGE_NAME" requestData="{\\"id\\": $(jobSpec.externalJobID), \\"data\\": { \\"from\\": $(decode_cbor.from), \\"to\\": $(decode_cbor.to), \\"passengers\\": $(decode_cbor.passengers), \\"classFlight\\": $(decode_cbor.classFlight) }}"]
     parse        [type=jsonparse path="data,co2e" data="$(fetch)"]
     encode_data  [type=ethabiencode abi="(uint256 value)" data="{ \\"value\\": $(parse) }"]
     encode_tx    [type=ethabiencode
                   abi="fulfillOracleRequest(bytes32 requestId, uint256 payment, address callbackAddress, bytes4 callbackFunctionId, uint256 expiration, bytes32 data)"
                   data="{\\"requestId\\": $(decode_log.requestId), \\"payment\\": $(decode_log.payment), \\"callbackAddress\\": $(decode_log.callbackAddr), \\"callbackFunctionId\\": $(decode_log.callbackFunctionId), \\"expiration\\": $(decode_log.cancelExpiration), \\"data\\": $(encode_data)}"
                  ]
-    submit_tx    [type=ethtx to="0x5CeD5FE184f6504DFF3Ce899392f8019f4F580f6" data="$(encode_tx)"]
+    submit_tx    [type=ethtx to="ORACLE_CONTRACT_ADDRESS" data="$(encode_tx)"]
 
     decode_log -> decode_cbor -> fetch -> parse -> encode_data -> encode_tx -> submit_tx
 """
-externalJobID = "5b11b78a-00bc-4151-b449-09421c04524e"
+
